--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="headline">
             <h2 class="headline-h2-1">Você encontrou a melhor</h2>
 
-            <h2 class="headline-h2-2">Agencia em Marketing Digital</h2>
+            <h2 class="headline-h2-2">Agência em Marketing Digital</h2>
 
             <p>Você está procurando uma agência de marketing digital que possa impulsionar o seu negócio na internet?
                 Então você precisa conhecer a Fazê, a agência que transforma ideias em resultados.</p>
